# proxybroker-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-DATA  NOTICE  README.md  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  provider-audit.yml  release.yml
benches/: check_pipeline.rs
book/: .gitignore  book.toml
book/src/: SUMMARY.md  data-and-licensing.md  introduction.md
book/src/architecture/: checking.md  feature-flags.md  geo-asn.md  overview.md  providers.md
book/src/cli/: check.md  find.md  grab.md  mcp.md  output-formats.md  overview.md  serve.md  top.md
book/src/getting-started/: installation.md  quick-start.md
book/src/operations/: observability.md
book/src/project/: contributing.md  deferred-backlog.md  roadmap.md  systematic-refactor.md
data/: README.md  providers.yaml
docs/roadmap/: deferred-backlog.md  p1-provider-expansion.md  p1-provider-research.md  roadmap.md  wave-1-inputs-and-foundation.md  wave-2-serving-selection-resilience.md  wave-3-serving-auth-control-protocols.md  wave-4-output-and-integration.md  wave-5-checking-depth.md  wave-6-observability.md  wave-7-persistence-and-adaptive.md  wave-8-distribution-and-ecosystem.md
docs/systematic-refactor/: assessment.md  decisions.md  goals.md  liveness.txt  liveness_custom.txt  map.md  research.md  trace.md  trace.symbols.md
examples/: byo_pool.rs  checking_depth.rs  custom_provider.rs  find.rs  find_and_save.rs  grab.rs  proxycontrol.rs  serve.rs  serve_authenticated.rs  serve_tuned.rs  socks5_frontend.rs  stats.rs
grafana/: proxybroker-dashboard.json
src/: broker.rs  checker.rs  connector.rs  error.rs  geo.rs  judge.rs  lib.rs  mcp.rs  negotiator.rs  parse.rs  persist.rs  provider.rs  proxy.rs  resolver.rs  scheduler.rs  server.rs  stats.rs  tui.rs  types.rs  utils.rs  watch.rs
tests/: bench_pipeline.rs  check.rs  check_caps.rs  check_http.rs  find.rs  geo_asn.rs  geo_city.rs  grab.rs  ip_scan.rs  ip_scan_oracle.json  judge_probe.rs  liveness.rs  mcp_pool.rs  metrics.rs  negotiate_connect.rs  persist.rs  persist_redis.rs  provider_audit.rs  provider_fetch.rs  provider_registry.rs  recheck.rs  resolver_extip.rs  retry.rs  rotating_connector.rs  serve.rs  serve_control.rs  serve_socks5.rs  tracing_events.rs  trust.rs  upstream_auth.rs  utils_chars.rs  utils_oracle.json  watch.rs
tests/data/: README.md
tests/data/providers/: fmt-colon-country.txt  fmt-plain-ipport.txt  fmt-scheme-prefixed.txt
