[package]
name = "proxybroker"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Find, check, and serve public HTTP(S) and SOCKS4/5 proxies. Library + CLI."
repository = "https://github.com/TurtIeSocks/proxybroker-rs"
homepage = "https://github.com/TurtIeSocks/proxybroker-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["proxy", "socks", "http", "scraper", "checker"]
categories = ["network-programming", "command-line-utilities"]
# The bundled geo database is data, not code, and is licensed separately (CC BY 4.0).
# See LICENSE-DATA and NOTICE. Never let the blanket Apache-2.0 imply we can
# sublicense the data — that is precisely the mistake proxybroker2 made.
# data/* covers the geo mmdb (runtime, via include_bytes!) AND providers.yaml (runtime, via
# include_str!). Missing providers.yaml here makes a published crate fail to compile — caught
# by `cargo publish --dry-run`, which is why release CI runs it.
include = ["src/**/*", "examples/**/*", "data/*", "LICENSE", "LICENSE-DATA", "NOTICE", "README.md"]

[features]
default = ["cli", "server", "geo", "geo-bundled"]
# The binary: arg parsing, output formatting, logging setup.
cli = ["dep:clap", "dep:tracing-subscriber"]
# Local rotating proxy server. Pure library users mostly do not want a listening socket.
server = []
# Country-lookup CODE.
geo = ["dep:maxminddb"]
# Country-lookup DATA — DB-IP Country Lite, CC BY 4.0. Requires attribution.
# Build with --no-default-features to ship zero geo data and zero attribution duty.
geo-bundled = ["geo"]

[dependencies]
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "time", "sync", "io-util", "macros", "fs", "signal"] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1.12"
# Provider scraping only. The checker deliberately does NOT use reqwest — it has no
# per-request proxy and an opaque error type. See docs/systematic-refactor/research.md.
# NB: 0.13 renamed the 0.12-era `rustls-tls` feature to `rustls`. Verified by cargo, not memory.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "gzip"] }
# The checker's HTTP, spoken over a stream we negotiated ourselves.
hyper = { version = "1.10", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-socks = "0.5"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
webpki-roots = "1"
hickory-resolver = { version = "0.26", features = ["tokio"] }
regex = "1.13"
# Header collections MUST preserve insertion order: the emitted request bytes depend on
# it, and std HashMap iteration is randomized per process. See trace.md (utils.py risk).
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
flate2 = "1"
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
tracing = "0.1"
url = "2"
rand = "0.9"

maxminddb = { version = "0.29", optional = true }
clap = { version = "4.6", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52", features = ["full", "test-util"] }

[[bin]]
name = "proxybroker"
path = "src/bin/proxybroker.rs"
required-features = ["cli"]

[profile.release]
lto = "thin"

[[example]]
name = "serve"
required-features = ["server"]
