[package]
name = "proxybroker"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
description = "Find, check, and serve public HTTP(S) and SOCKS4/5 proxies. Library + CLI."
repository = "https://github.com/TurtIeSocks/proxybroker-rs"
homepage = "https://github.com/TurtIeSocks/proxybroker-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["proxy", "socks", "http", "scraper", "checker"]
categories = ["network-programming", "command-line-utilities"]
# The bundled geo database is data, not code, and is licensed separately (CC BY 4.0).
# See LICENSE-DATA and NOTICE. Never let the blanket Apache-2.0 imply we can
# sublicense the data — that is precisely the mistake proxybroker2 made.
# data/* covers the geo mmdb (runtime, via include_bytes!) AND providers.yaml (runtime, via
# include_str!). Missing providers.yaml here makes a published crate fail to compile — caught
# by `cargo publish --dry-run`, which is why release CI runs it.
# Root-file entries are anchored with a leading "/": the bare gitignore-style glob "README.md"
# matches in ANY directory, which would pull tests/data/README.md (the City-fixture provenance)
# into the package. Anchoring keeps the published crate free of anything under tests/.
include = ["src/**/*", "examples/**/*", "data/*", "/LICENSE", "/LICENSE-DATA", "/NOTICE", "/README.md"]

[features]
default = ["cli", "server", "geo", "geo-bundled"]
# The binary: arg parsing, output formatting, logging setup.
cli = ["dep:clap", "dep:tracing-subscriber"]
# Local rotating proxy server. Pure library users mostly do not want a listening socket.
server = []
# Prometheus metrics endpoint for `serve` (F1). No new dependency — a hand-rolled text exporter.
metrics = ["server"]
# Live progress bar during `find` (F2). Pulls in indicatif; off by default so the default binary
# stays lean.
progress = ["cli", "dep:indicatif"]
# Persistence CONTRACT (D2): the `Store` trait + observer machinery, no backend dependency. A
# pure-library user can impl `Store` for any backend; a backend feature provides a concrete one.
persist = []
# SQLite backend for `--state` (D2). Bundled SQLite: static link, no system libsqlite3.
store-sqlite = ["persist", "dep:rusqlite"]
# Redis backend for `--state` (D2, Wave 9). The atomic EWMA upsert that SqliteStore does with SQL
# `ON CONFLICT` is a Lua `EVAL` here (Redis runs scripts single-threaded, so no WATCH/MULTI needed).
# The `Store` trait is synchronous, so this uses redis-rs's blocking `Connection` — no tokio-comp.
store-redis = ["persist", "dep:redis"]
# `proxybroker top` terminal dashboard (F4). Pulls ratatui + crossterm; off by default so the
# default binary stays lean. Needs `cli` (the subcommand) and `server` (reads a live Pool).
tui = ["cli", "server", "dep:ratatui", "dep:crossterm"]
# Live-reload the `serve --load` file (E3): a filesystem watcher reconciles the running pool.
watch = ["server", "dep:notify"]
# Expose the live pool over MCP stdio (E4, `proxybroker mcp`). rmcp is pinned exactly — it churns.
mcp = ["server", "cli", "dep:rmcp"]
# A drop-in hyper-util connector (E1) routing each connection through a rotating pooled proxy.
connector = ["server", "dep:tower-service", "hyper-util/client-legacy"]
# Country-lookup CODE.
geo = ["dep:maxminddb"]
# Country-lookup DATA — DB-IP Country Lite, CC BY 4.0. Requires attribution.
# Build with --no-default-features to ship zero geo data and zero attribution duty.
geo-bundled = ["geo"]

[dependencies]
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "time", "sync", "io-util", "macros", "fs", "signal", "io-std"] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1.12"
# Provider scraping only. The checker deliberately does NOT use reqwest — it has no
# per-request proxy and an opaque error type. See docs/systematic-refactor/research.md.
# NB: 0.13 renamed the 0.12-era `rustls-tls` feature to `rustls`. Verified by cargo, not memory.
# `rustls-no-provider` (not `rustls`): the latter pulls aws-lc-rs (its `__rustls-aws-lc-rs`), whose
# `-sys` C/asm crate is the musl cross-compile blocker (D1). We supply the ring provider ourselves
# (rustls already ships with `ring`) and install it as the process default at startup, keeping the
# whole graph ring-only and musl-clean.
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "webpki-roots", "gzip"] }
# The checker's HTTP, spoken over a stream we negotiated ourselves.
hyper = { version = "1.10", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-socks = "0.5"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
webpki-roots = "1"
hickory-resolver = { version = "0.26", features = ["tokio"] }
regex = "1.13"
# Header collections MUST preserve insertion order: the emitted request bytes depend on
# it, and std HashMap iteration is randomized per process. See trace.md (utils.py risk).
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
flate2 = "1"
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
tracing = "0.1"
url = "2"
rand = "0.9"

maxminddb = { version = "0.29", optional = true }
clap = { version = "4.6", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
indicatif = { version = "0.18", optional = true }
# `bundled` compiles SQLite from source: no system libsqlite3, static link (matches the musl goal).
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# The blocking `redis::Connection`/`Client`/`Commands` are unconditional (core, not feature-gated) —
# matches the sync `Store` trait, no tokio-comp needed. `script` (for `redis::Script`, the atomic
# upsert) is the one extra feature we need; disabling the rest (acl/streams/geospatial/num-bigint,
# on by default) keeps the dep minimal. Verified against the crate source, not memory: current major
# is 1.x (`cargo search redis` → redis = "1.4.0"; confirmed in ~/.cargo/registry/src/.../redis-1.4.0).
# `tls-rustls-webpki-roots`: makes `rediss://` (managed Redis: ElastiCache/Upstash/Redis Cloud) work
# with bundled roots (no OS cert store — right for the static musl / scratch binary). It reuses the
# crate's ring-only rustls (D1), so the graph stays aws-lc-free.
redis = { version = "1", optional = true, default-features = false, features = ["script", "tls-rustls-webpki-roots"] }
notify = { version = "8", optional = true }
# Pinned exactly (=): rmcp's macro + transport surface moves across releases (roadmap C-flag).
rmcp = { version = "=2.2.0", features = ["server", "macros", "transport-io"], optional = true }
tower-service = { version = "0.3", optional = true }
ratatui = { version = "0.30", optional = true }
# `event-stream`: async key events for the `top` dashboard's tokio::select! loop.
crossterm = { version = "0.29", optional = true, features = ["event-stream"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52", features = ["full", "test-util"] }
criterion = { version = "0.7", features = ["async_tokio"] }
libc = "0.2"

[[bench]]
name = "check_pipeline"
harness = false

[[bin]]
name = "proxybroker"
path = "src/bin/proxybroker.rs"
required-features = ["cli"]

[profile.release]
lto = "thin"

[[example]]
name = "serve"
required-features = ["server"]

[[example]]
name = "serve_authenticated"
required-features = ["server"]

[[example]]
name = "serve_tuned"
required-features = ["server"]

[[example]]
name = "byo_pool"
required-features = ["server"]

[[example]]
name = "proxycontrol"
required-features = ["server"]

[[example]]
name = "socks5_frontend"
required-features = ["server"]
